support for dynamic categories list.
